# truenaspy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  example.py  example_ws.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  workspace.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: python-lint.yml  python-publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml
truenaspy/: __init__.py  api.py  auth.py  collect.py  collects.py  const.py  exceptions.py  helper.py  websocket.py
