[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "truenaspy"
dynamic     = ["version"]
license     = "GPL-3.0-or-later"
description = "Provides asynchronous authentication and access to Truenas devices"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["async", "truenas", "scale", "core"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
requires-python = ">=3.12.0"
dependencies    = [
    "aiohttp>=3.9.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "python-typing-update",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/truenaspy"

[tool.setuptools_scm]

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["node_modules*"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
